tests/ui/functions-closures/fn-help-with-err.stderr
error[E0425]: cannot find value `oops` in this scope
  --> $DIR/fn-help-with-err.rs:13:35
   |
LL |     let arc = std::sync::Arc::new(oops);
   |                                   ^^^^ not found in this scope

error[E0599]: no method named `bar` found for struct `Arc<[closure@$DIR/fn-help-with-err.rs:18:36: 18:38]>` in the current scope
  --> $DIR/fn-help-with-err.rs:19:10
   |
LL |     arc2.bar();
   |          ^^^ method not found in `Arc<[closure@fn-help-with-err.rs:18:36]>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Bar` defines an item `bar`, perhaps you need to implement it
  --> $DIR/fn-help-with-err.rs:5:1
   |
LL | trait Bar {
   | ^^^^^^^^^
help: use parentheses to call this closure
   |
LL |     arc2().bar();
   |         ++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0425, E0599.
For more information about an error, try `rustc --explain E0425`.
